# rhwp-python

./: .copier-answers.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_EN.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  dependabot-uv-sync.yml  publish-schema.yml  publish.yml
benches/: bench_gil.py
docs/: CONVENTIONS.md  rhwp-pypi.md
docs/design/: pyo3-bindings.md
docs/design/v0.2.0/: ir-design-research.md
docs/design/v0.3.0/: cli-design-research.md  ir-expansion-research.md
docs/implementation/v0.1.0/: migration.md
docs/implementation/v0.2.0/stages/: stage-1.md  stage-2.md  stage-3.md  stage-4.md  stage-5.md
docs/roadmap/: README.md  phase-2.md  phase-3.md  phase-4.md
docs/roadmap/v0.1.0/: rhwp-python.md
docs/roadmap/v0.2.0/: cli.md  ir.md
docs/roadmap/v0.3.0/: cli.md  ir-expansion.md
docs/verification/v0.1.0/: spinoff-review.md
examples/: 01_parse_basic.py  02_render_svg_pdf.py  03_langchain_rag.py  04_document_ir.py  05_langchain_ir_blocks.py  README.md
python/rhwp/: __init__.py  __init__.pyi  _rhwp.pyi  document.py
python/rhwp/integrations/: __init__.py  langchain.py  langchain.pyi
python/rhwp/ir/: __init__.py  __init__.pyi  _mapper.py  _raw_types.py  nodes.py  schema.py
python/rhwp/ir/schema/: hwp_ir_v1.json
src/: document.rs  errors.rs  ir.rs  lib.rs  version.rs
tests/: conftest.py  test_async.py  test_errors.py  test_from_bytes.py  test_ir_furniture.py  test_ir_iter_blocks.py  test_ir_mapper.py  test_ir_picture.py  test_ir_roundtrip.py  test_ir_schema.py  test_ir_schema_export.py  test_ir_tables.py  test_langchain_loader.py  test_langchain_loader_ir.py  test_parse.py  test_pdf_rendering.py  test_smoke.py  test_svg_rendering.py  test_text_extraction.py  type_check_errors.py  type_check_samples.py
